# learn_programming

./: README.md
C/konsola/: CMakeLists.txt  main.c
C/matrix/: CMakeLists.txt  main.c
C/matrix/include/: matrix.h
C/matrix/src/: matrix.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/: SetCommonConfig.cmake
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/STATS_CASH_CHAR/: CMakeLists.txt  main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/bit_fiddling/include/: bitlib.h
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/bit_fiddling/src/: bitlib.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/conditional_compilation/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/conditionals/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/custom_types/include/: tasks.h
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/custom_types/src/: tasks.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/custom_types/test/: test_tasks.cpp
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/funkcje/: CMakeLists.txt  main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/lancuchy/: CMakeLists.txt  main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/literals/: CMakeLists.txt
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/loops/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/memory_management/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/memory_management/include/: mymem.h
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/memory_management/src/: mymem.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/pointers/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/pointers/src/: ptrlib.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/tablice/: CMakeLists.txt  main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/skeletons/type_conversion/: main.c
C/mdig-agh-lang_c__exercises-8b07bfe7cc20/solutions/: SetCommonConfig.cmake
C/struktura_projektu/: CMakeLists.txt  main.c
C/struktura_projektu/include/: prad.h
C/struktura_projektu/src/: prad.c
C/tablice/: CMakeLists.txt  main.c
C/tablice/include/: source1.h
C/tablice/src/: source1.c
Cpp/data_filter/: CMakeLists.txt  main.cpp
Cpp/first_classes/: CMakeLists.txt  main.cpp
Cpp/mdig-agh-lang_cpp__exercises-288bd81c85d7/skeletons/catalogue-1/include/: catalogue.hpp
Cpp/mdig-agh-lang_cpp__exercises-288bd81c85d7/skeletons/catalogue-1/src/: catalogue.cpp
Cpp/mdig-agh-lang_cpp__exercises-288bd81c85d7/skeletons/catalogue-1/test/: test_catalogue.cpp  test_product.cpp
Cpp/mdig-agh-lang_cpp__exercises-288bd81c85d7/skeletons/matlab-4/test/: test_matrix.cpp
Cpp/mdig-agh-lang_cpp__exercises-288bd81c85d7/skeletons/shapes-1/include/: shapes.hpp
Cpp/plane_boarding/: CMakeLists.txt  UML.txt  db_main.cpp  main.cpp
Cpp/plane_boarding/include/: board.hpp  passenger.hpp  reports.hpp  seats.hpp  seats_rows.hpp
Cpp/plane_boarding/src/: board.cpp  passenger.cpp  reports.cpp  seats.cpp  seats_rows.cpp  simulation.cpp
Cpp/plane_boarding/test/: test_board.cpp  test_passenger.cpp  test_seat.cpp
Cpp/text_opt/: CMakeLists.txt  main.cpp
(+5 files in other folders)
